# ai_lense

./: .env.example  CLAUDE.md  Dockerfile  ISSUES.md  README.md  README.txt  alembic.ini  architecture_scalability.md  docker-compose.yml  pyproject.toml  railway.toml  roadmap_visual_deco_search.md  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1ea1f6a1ed9d_p1_t1_catalog_schema_products_indexing_.py
app/: main.py
app/api/: middleware.py
app/catalog/: base.py  embed_job.py  ingest.py
app/catalog/sources/: awin.py
app/core/: config.py  logging.py
app/db/: base.py  models.py  postgres.py  qdrant.py  r2.py  redis.py
app/services/: embedding.py  qdrant_writer.py  taxonomy.py
config/: taxonomy.yaml
scripts/: ingest_awin.py  init_qdrant.py  inspect_awin_feed.py
tests/: test_smoke.py
tests/catalog/: test_awin.py  test_embed_job.py  test_ingest.py
tests/catalog/fixtures/: awin_sample.csv
tests/scripts/: test_init_qdrant.py
tests/services/: test_embedding.py  test_qdrant_writer.py  test_taxonomy.py
