[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-deco-search"
version = "0.1.0"
description = "Visual Deco Search MVP - AI-powered interior design catalog search"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "telemaquebuzzi@gmail.com"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.4",
    "qdrant-client>=1.9.1",
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "python-magic>=0.4.27",
    "pillow>=10.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "torch>=2.3.0",
    "transformers>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.setuptools]
packages = ["app", "app.api", "app.api.routes", "app.services", "app.models", "app.db", "app.core", "app.catalog", "app.catalog.sources"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
